--- a/Memory Matching Game/Memory Matching Game.csproj
+++ b/Memory Matching Game/Memory Matching Game.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Pic\Memory-Game-.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -36,6 +37,10 @@
       <Lcid>0</Lcid>
       <Isolated>false</Isolated>
     </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Pic\Memory-Game-.ico" />
   </ItemGroup>
 
   <ItemGroup>
